done with ssh now

--- a/index.htm
+++ b/index.htm
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-        <h2 class="md-heading main-heading capitalize">password <span class="purple">generator</span></h2>
+        <h2 class="md-heading main-heading capitalize">password <span class="purple">generators</span></h2>
         <div class="card">
             <div class="password-box">
                 <input type="text" placeholder="" disabled>
